--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         body {
             width: 100%;
             height: 100%;
+            margin: 0;
         }
 
         #panorama {
@@ -54,6 +55,7 @@
     <div id="back-button"></div>
 </body>
 <script type="text/javascript" src="js/krpano.js"></script>
+<script type="text/javascript" src="js/jweixin-1.3.2.js"></script>
 <script type="text/javascript" src="main.js"></script>
 
 </html>
